--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: SyphlexSkyblock
 author: iDurpy
 main: net.syphlex.skyblock.Skyblock
-version: 0.0.1b
+version: 0.0.5b
 api-version: 1.13
 
 dependencies:
@@ -14,3 +14,5 @@ dependencies:
 commands:
   island:
     aliases: [is]
+  mine:
+    aliases: [mines]
