--- a/pom.xml
+++ b/pom.xml
@@ -13,80 +13,122 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
     <repositories>
+
+        <!-- WildStacker Repository -->
+        <repository>
+            <id>bg-repo</id>
+            <url>https://repo.bg-software.com/repository/api/</url>
+        </repository>
+
+        <!-- PlaceholderAPI Repository -->
         <repository>
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
+
+        <!-- Jitpack Repository -->
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+
+        <!-- codecmd?? Repository -->
         <repository>
             <id>codemc-repo</id>
             <url>https://repo.codemc.io/repository/maven-public/</url>
             <layout>default</layout>
         </repository>
+
+        <!-- Respark?? Repository -->
         <repository>
             <id>respark-releases</id>
             <name>Respark - Maven Repository</name>
             <url>https://maven.respark.dev/releases</url>
         </repository>
+
+        <!-- Paper Spigot Repository -->
+        <repository>
+            <id>papermc</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
+        </repository>
     </repositories>
     <dependencies>
+
+        <!-- LOMBOK API -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.32</version>
             <scope>provided</scope>
         </dependency>
-        <!-- This adds the Spigot API artifact to the build  -->
+
+        <!-- Paper Spigot API  -->
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
+            <groupId>io.papermc.paper</groupId>
+            <artifactId>paper-api</artifactId>
             <version>1.20.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>24.1.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/net.kyori/adventure-api -->
-        <!-- https://mvnrepository.com/artifact/net.kyori/adventure-text-serializer-legacy -->
+
+        <!-- kyori chat stuff API -->
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>adventure-text-serializer-legacy</artifactId>
             <version>4.16.0</version>
         </dependency>
+
+        <!-- PlaceholderAPI API -->
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
             <version>2.11.5</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- NBT item tag API -->
         <dependency>
             <groupId>de.tr7zw</groupId>
             <artifactId>item-nbt-api-plugin</artifactId>
             <version>2.12.2</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- License Gate API todo setup license system -->
         <dependency>
             <groupId>dev.respark.licensegate</groupId>
             <artifactId>license-gate</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <!-- Fast Async World Edit API -->
         <dependency>
             <groupId>com.fastasyncworldedit</groupId>
             <artifactId>FastAsyncWorldEdit-Core</artifactId>
             <version>2.9.2</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Vault API -->
         <dependency>
             <groupId>com.github.MilkBowl</groupId>
             <artifactId>VaultAPI</artifactId>
             <version>1.7</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Wild Stacker API -->
+        <dependency>
+            <groupId>com.bgsoftware</groupId>
+            <artifactId>WildStackerAPI</artifactId>
+            <version>2024.1</version>
+        </dependency>
+
     </dependencies>
 </project>
