--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 
     <groupId>org.example</groupId>
     <artifactId>SyphlexSkyblock</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0.0-BETA</version>
+    <!--<version>1.0-SNAPSHOT</version>-->
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
